feat: :sparkles: Se crea endpoint para USUARIOS
Este endpoint perimite eliminar usuarios de la DB

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MY_CONFIG={"hostname":"localhost", "port":3300}
-MY_CONNECTION={"host":"localhost", "user":"root","password":"1234","database":"Synthia", "port":3306}  
+MY_CONNECTION={"host":"localhost", "user":"campus","password":"campus2023","database":"Synthia", "port":3306}  
