--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MY_CONFIG={"hostname":"localhost", "port":3300}
 MY_CONNECTION={"host":"localhost", "user":"root","password":"1234","database":"Synthia", "port":3306}  
+JWT_PRIVATE_KEY="Synthia"
