feat: :closed_lock_with_key: se deja vacio el .env
Se vacia el archivo .env para que pueda ser asigandas variables de entorno a quien lo prueba

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MY_CONFIG={"hostname":"localhost", "port":3300}
-MY_CONNECTION={"host":"localhost", "user":"root","password":"1234","database":"Synthia", "port":3306}  
-JWT_PRIVATE_KEY="Synthia"
+MY_CONFIG={"hostname":"", "port":}
+MY_CONNECTION={"host":"", "user":"","password":"","database":"", "port":}  
+JWT_PRIVATE_KEY=""
