--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MY_CONFIG={"hostname":"", "port":}
-MY_CONNECTION={"host":"", "user":"","password":"","database":"", "port":}  
-JWT_PRIVATE_KEY=""
+MY_CONFIG={"hostname":"localhost", "port":3400}
+MY_CONNECTION={"host":"localhost", "user":"campus","password":"campus2023","database":"Synthia", "port":3306}  
+JWT_PRIVATE_KEY="campus"
